# invent2026-ULL-HFT-trading-145ns-P80-3GHz3

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: ARCHITECTURE.md  BENCHMARK.md  README.md
include/natska/: asm.hpp  engine.hpp  ring_buffer.hpp
scripts/: build.sh  jitter_dashboard.sh  latency_trace.sh  perf_monitor.sh  run_tests.sh
src/: main.cpp  natska_asm.S
